Gcp main 2 (#804)
* Oppgrader dockerfile til java-21

* Oppgrader til Java 21 i gradle-fil og i GHA

* Oppgrader Kotlins JVM-plugin

* WIP

* Flytt enum i yml ut, skriv om til bloat

* Gjør småting for å få Lombok til å fungere

* Forhindre at metode defineres som static

* Force versjon av jackson

* Force alle versjoner av jackson selv om det kanskje er unødvendig

* Fiks versjonering av jackson og korrekt generering av Enum-klasser med OpenApi

* Fjern RestAssured config

* Marker i query at inputvariabelen er en streng ved å putte på anførselstegn

* Squash migrations

* Start omskriving til embedded postgres

* Bruk embedded postgres i tester istedetfor h2

* Rewrite ViewTest to RegisterExtension instead of Rule

* Lag extension for postgres i unit-tester

* Sett schema i db config

* Lag veilarbaktivitet-bruker i test

* Lower case public in test

* Fiks test

* Clean up etter hver test

* Bruk sigleton istedetfor Spring-annotatsjon fra embedded postgres

* Caste til smallint, legg inn testdata

* Lag egen sqlParameterMap for å slippe å skrive om verdier i alle operasjoner

* Legg til kanal_type i flyway

* Felles databaseoppsett for enhetstester

* Bruk små bokstaver for case sensitivt kolonnenavn

* Litt LocalDatabaseSingleton og litt enum-tabell-flyway

* Implementer VeilarbAktivitetResultSet

* Håndter at fravær av tall som representerer boolsk verdi blir null og ikke false

* Deleger i mapsqlparametersource for å håndtere ting bedre

* Fiks fler tester

* Fix versjon assert fordi postgres hopper mye mer enn +1 i seq

* Håndtert at postgres lagrer timestamp annerledes enn Oracle

* Slett unødvendig test

* Sett kafka_enabled til false

* WIP: Proxyfilter med tokeninterceptor

* WIP: PRoxy

* Beanify ProxyFilter deps

* Add action and nais file for dev-gcp

* Auto deploy på gco-main branch

* Use same permissions as old action

* Rename yml -> yaml

* Fjern on-prem confi